create endpoint to delete truck (soft delete)
