# internal/handlers/handler.go
@@ -15,6 +15,7 @@ type (
 		HealthHandler
 		AddTruckHandler
 		DetailDataMultiplierHandler
+		DeleteTruckHandler
 	}
 
 	LoginHandler interface {
@@ -39,6 +40,10 @@ type (
 
 	DetailDataMultiplierHandler interface {
 		DetailDataMultiplier(ctx context.Context, rt *kurirmoo.Runtime, ID string) (route string, city_passed int64, lane string, distance int64, truck_kind string, brand string, truck_type string, volume int64, capacity int64, max_price int64, min_price int64, price_per_km int64, id int64, err error)
+	}
+
+	DeleteTruckHandler interface {
+		DeleteTruck(ctx context.Context, rt *kurirmoo.Runtime, ID int64) (message string, err error)
 	}
 )
 
